[package]
name = "trojan"
version = "0.1.0"
authors = ["Cassy"]
edition = "2018"


[dependencies]
winapi = { version = "0.3.9", features = ["shellapi"] }
is_elevated = "0.1.2"
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3.0" }
futures = "0.3.13"
dirs = "3.0.1"
tokio-tungstenite = "0.14.0"
winit = "0.24.0"
once_cell = "1.7.2"
byteorder = "1.4.3"